<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial_usage_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:paddingLeft="32sp"
    android:paddingRight="32sp"
    tools:context=".tutorial.tab.TutorialFragmentUsage">

    <TextView
        android:id="@+id/tutorial_usage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tutorial_usage_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutorial_usage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/tutorial_usage_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tutorial_usage_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_usage_title" />

    <ImageView
        android:id="@+id/tutorial_usage_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/home_round_screen"
        app:layout_constraintBottom_toTopOf="@id/tutorial_usage_text_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tutorial_usage_text"
        app:layout_constraintTop_toBottomOf="@id/tutorial_usage_text"
        app:srcCompat="@drawable/home_round_screen"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tutorial_usage_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/tutorial_usage_text_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_usage_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>